Issue #2717435 by Sam152: Videos in Colorbox modal not responsive

--- a/css/video_embed_field.responsive-video.css
+++ b/css/video_embed_field.responsive-video.css
@@ -18,3 +18,7 @@
   height: 100%;
   margin: 0;
 }
+
+.video-embed-field-responsive-modal {
+  max-width: 100%;
+}
